GNOME Bugzilla – Bug 660906
nautilus quits when deleting a folder in the left side treeview
Last modified: 2011-10-17 15:29:14 UTC
this report has been filed here: https://bugs.launchpad.net/ubuntu/+source/nautilus/+bug/845408 "Steps to reproduce it: 1- Open a nautilus folder 2- Change the Sidebar view to Tree. 3- Delete a directory on that Tree." " Hilo 3 (Thread 0xb5cffb70 (LWP 3215)):
+ Trace 228682
look at the bug 654499 and https://bugzilla.gnome.org/show_bug.cgi?id=602500#c63
Thanks, I fixed this in git master. A fix for this bug will also be available in Nautilus 3.2.1.