tree-sidebar: don't call g_free on a GObject list

https://bugzilla.gnome.org/show_bug.cgi?id=660906
https://bugs.launchpad.net/ubuntu/+source/nautilus/+bug/845408