src/nautilus-tree-sidebar.c
@@ -1028,7 +1028,7 @@ fm_tree_view_trash_cb (GtkWidget *menu_item,
 	nautilus_file_operations_trash_or_delete (list, 
 						  fm_tree_view_get_containing_window (view),
 						  NULL, NULL);
-	g_list_free_full (list, g_free);
+	g_list_free_full (list, g_object_unref);
 }
 
 static void
